--- a/src/main/resources/static/Announcement.html
+++ b/src/main/resources/static/Announcement.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<meta charset="utf-8">
     <title>公告发布</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -120,7 +119,7 @@
             <div id="PhotoInfo" class="mdui-shadow-5">
                 <div id="photoInfoLabel" class="mylabel">三、图片介绍</div>
                     <div class="uploadArea"><span>上传标题图片:</span><input type="file" id="file" name="file" ></div>
-                    <div class="uploadArea"><span>上传内容图片:</span><input type="file" id="file" name="file" ></div>
+                    <div class="uploadArea"><span>上传内容图片:</span><input type="file" id="file" name="file" multiple="file"></div>
                 </div>
                     
                     
