--- a/src/main/resources/static/clock.html
+++ b/src/main/resources/static/clock.html
@@ -1,7 +1,6 @@
 
 <html>
 <head>
-<meta charset="utf-8">
     <title>查看学生打卡</title>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/echarts.min.js"></script>
@@ -120,7 +119,7 @@
 
 
     var $$=mdui.JQ;
-    
+    var teaid = JSON.parse(sessionStorage.getItem("userid"))
     var detailDialog=new mdui.Dialog("#record");
     window.operateEvents={
         "click .detail":function (index,value,row){
@@ -150,7 +149,7 @@
 
     
         $("#table").bootstrapTable({
-        url: 'http://47.95.141.31:8080/prevention/Clock?nowTime='+time,         //请求后台的URL（*）
+        url: 'http://47.95.141.31:8080/prevention/Clock?nowTime='+time+'&teacher_id='+teaid,         //请求后台的URL（*）
         method: 'get',                      //请求方式（*）
         toolbar: '#toolbar',                //工具按钮用哪个容器
         striped: true,                      //是否显示行间隔色
