--- a/src/main/resources/static/index1.html
+++ b/src/main/resources/static/index1.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
 	<title>高校疫情防控 管理中心</title>
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -78,6 +77,14 @@
        <div class="mdui-collapse-item-body mdui-list">
         <a onclick="switich('post.html')"  class="mdui-list-item mdui-ripple ">问题上报</a>
 
+      </div>
+      
+    </div>
+     <div class="mdui-collapse-item ">
+      <div class="mdui-collapse-item-header mdui-list-item mdui-ripple">
+        <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-lime-500">receipt</i>
+        <div onclick="switich('score.html')" class="mdui-list-item-content" >抗疫积分管理</div>
+        <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
       </div>
       
     </div>
