--- a/src/main/resources/static/Absence.html
+++ b/src/main/resources/static/Absence.html
@@ -1,7 +1,6 @@
 
 <html>
 <head>
-<meta charset="utf-8">
     <title>今日缺勤</title>
     <script src="js/jquery-3.3.1.min.js"></script>
 
@@ -105,6 +104,7 @@
 
 <script>
     var $$=mdui.JQ;
+    var teaid = JSON.parse(sessionStorage.getItem("userid"))
     
     var detailDialog=new mdui.Dialog("#record");
     window.operateEvents={
@@ -135,7 +135,7 @@
 
     
         $("#table").bootstrapTable({
-        url: 'http://47.95.141.31:8080/prevention/Report?nowTime='+time,         //请求后台的URL（*）
+        url: 'http://47.95.141.31:8080/prevention/Report?nowTime='+time+'&teacher_id='+teaid,         //请求后台的URL（*）
         method: 'get',                      //请求方式（*）
         toolbar: '#toolbar',                //工具按钮用哪个容器
         striped: true,                      //是否显示行间隔色
