--- a/src/main/resources/static/Release-Pre.html
+++ b/src/main/resources/static/Release-Pre.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<meta charset="utf-8">
     <title>抗疫事迹发布</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -119,7 +118,7 @@
 
             <div id="PhotoInfo" class="mdui-shadow-5">
                 <div id="photoInfoLabel" class="mylabel">三、图片介绍</div>
-                    <div class="uploadArea"><span>上传图片:</span><input type="file" id="file" name="file" ></div>
+                    <div class="uploadArea"><span>上传图片:</span><input type="file" id="file" name="file" multiple="file" ></div>
                     
                 </div>
                 <div class="Separate"></div>
@@ -156,7 +155,7 @@
         });
         $$.ajax({
             method: 'POST',
-            url: 'http://47.95.141.31:8080/prevention/Article',
+            url: 'http://47.95.141.31:8080/prevention/ArticleAdmin',
             contentType:false,
             data:formdata,
 			success: function (data) {
