--- a/src/main/resources/static/Revoke-Stu.html
+++ b/src/main/resources/static/Revoke-Stu.html
@@ -1,8 +1,7 @@
 
 <html>
 <head>
-<meta charset="utf-8">
-    <title>抗疫事迹管理</title>
+    <title>学习分享管理</title>
     <script src="js/jquery-3.3.1.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -32,7 +31,7 @@
 </style>
 
 <body class="mdui-theme-primary-light-blue mdui-theme-accent-blue">
-    <h2 class="mdui-text-color-theme">抗疫事迹管理</h2>
+    <h2 class="mdui-text-color-theme">学习分享管理</h2>
     <div id="content">
        <div id="tableArea">
            <table id="table"></table>
